--- a/experiment_scripts/configs/config_blender.ini
+++ b/experiment_scripts/configs/config_blender.ini
@@ -1,34 +1,34 @@
 # General & I/O
-experiment_name = blender_lego
+experiment_name = blender_hotdog_big_3
 logging_root = ../logs/
 llff_dataset_path = ../data/nerf_llff_data/trex
-nerf_dataset_path = ../data/nerf_synthetic/lego/
+nerf_dataset_path = ../data/nerf_synthetic/hotdog/
 dv_dataset_path = ../data/deepvoxel/globe/
 dataset = blender
 num_epochs = 100000
 epochs_til_ckpt = 100
-steps_til_summary = 5000 
+steps_til_summary = 500 
 
 # GPU & computing
 gpu = 0
-num_workers = 4
+num_workers = 2 
 
 # Learning
 lr = 0.0005
-batch_size = 4
+batch_size = 4 
 
 # Network architecture
-hidden_features = 256 
-hidden_layers = 8
+hidden_features = 128 
+hidden_layers = 4
 activation = swish 
 use_piecewise_model = true
 use_grad = true 
 normalize_pe = true 
 
 # Nerf properties
-img_size = 800
-samples_per_ray = 128
-samples_per_view = 1024
+img_size = 400
+samples_per_ray = 32 
+samples_per_view = 64 
 use_sampler = true
-num_cuts = 32
+num_cuts = 32 
 use_sobol_ray_sampling = true
